// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Checkbox> that renders a checkbox should not render any svg when checked and indeterminate are both false 1`] = `
<Checkbox
  checked={false}
  id="c7"
  indeterminate={false}
  onChange={[Function]}
>
  <div>
    <input
      checked={false}
      className="Checkbox__input"
      disabled={false}
      id="c7"
      onChange={[Function]}
      type="checkbox"
    />
    <label
      className="Checkbox__label"
      htmlFor="c7"
    >
      <span
        className="Checkbox__box"
      >
        <svg
          className="Checkbox__svg"
          height="10px"
          viewBox={
            Array [
              0,
              0,
              10,
              10,
            ]
          }
          width="12px"
        />
      </span>
      <Text
        className="Checkbox__text"
        context="default"
        inline={true}
      >
        <span
          className="Checkbox__text"
        >
          Useless checkbox
        </span>
      </Text>
    </label>
  </div>
</Checkbox>
`;

exports[`<Checkbox> that renders a checkbox should render checkbox with complex children 1`] = `
<Checkbox
  id="c1"
>
  <div>
    <input
      className="Checkbox__input"
      disabled={false}
      id="c1"
      type="checkbox"
    />
    <label
      className="Checkbox__label"
      htmlFor="c1"
    >
      <span
        className="Checkbox__box"
      >
        <svg
          className="Checkbox__svg"
          height="10px"
          viewBox={
            Array [
              0,
              0,
              10,
              10,
            ]
          }
          width="12px"
        >
          <polyline
            points="1.5 6 3.5 9 8 3"
          />
        </svg>
      </span>
      <span>
        Check this out 
        <span>
          something else
        </span>
      </span>
    </label>
  </div>
</Checkbox>
`;

exports[`<Checkbox> that renders a checkbox should render default checkbox correctly 1`] = `
<Checkbox
  id="c1"
>
  <div>
    <input
      className="Checkbox__input"
      disabled={false}
      id="c1"
      type="checkbox"
    />
    <label
      className="Checkbox__label"
      htmlFor="c1"
    >
      <span
        className="Checkbox__box"
      >
        <svg
          className="Checkbox__svg"
          height="10px"
          viewBox={
            Array [
              0,
              0,
              10,
              10,
            ]
          }
          width="12px"
        >
          <polyline
            points="1.5 6 3.5 9 8 3"
          />
        </svg>
      </span>
      <Text
        className="Checkbox__text"
        context="default"
        inline={true}
      >
        <span
          className="Checkbox__text"
        >
          Check this out
        </span>
      </Text>
    </label>
  </div>
</Checkbox>
`;

exports[`<Checkbox> that renders a checkbox should render the checked svg when checked is true and indeterminate false 1`] = `
<Checkbox
  checked={true}
  id="c5"
  indeterminate={false}
  onChange={[Function]}
>
  <div>
    <input
      checked={true}
      className="Checkbox__input"
      disabled={false}
      id="c5"
      onChange={[Function]}
      type="checkbox"
    />
    <label
      className="Checkbox__label"
      htmlFor="c5"
    >
      <span
        className="Checkbox__box"
      >
        <svg
          className="Checkbox__svg"
          height="10px"
          viewBox={
            Array [
              0,
              0,
              10,
              10,
            ]
          }
          width="12px"
        >
          <polyline
            points="1.5 6 3.5 9 8 3"
          />
        </svg>
      </span>
      <Text
        className="Checkbox__text"
        context="default"
        inline={true}
      >
        <span
          className="Checkbox__text"
        >
          Useless checkbox
        </span>
      </Text>
    </label>
  </div>
</Checkbox>
`;

exports[`<Checkbox> that renders a checkbox should render the indeterminate svg when checked and indeterminate are true 1`] = `
<Checkbox
  checked={true}
  id="c6"
  indeterminate={true}
  onChange={[Function]}
>
  <div>
    <input
      checked={true}
      className="Checkbox__input Checkbox__input--indeterminate"
      disabled={false}
      id="c6"
      onChange={[Function]}
      type="checkbox"
    />
    <label
      className="Checkbox__label"
      htmlFor="c6"
    >
      <span
        className="Checkbox__box"
      >
        <svg
          className="Checkbox__svg"
          height="10px"
          viewBox={
            Array [
              0,
              0,
              10,
              10,
            ]
          }
          width="12px"
        >
          <line
            x1="2"
            x2="8"
            y1="6"
            y2="6"
          />
        </svg>
      </span>
      <Text
        className="Checkbox__text"
        context="default"
        inline={true}
      >
        <span
          className="Checkbox__text"
        >
          Useless checkbox
        </span>
      </Text>
    </label>
  </div>
</Checkbox>
`;

exports[`<Checkbox> that renders a checkbox should render the indeterminate svg when checked is false and indeterminate true 1`] = `
<Checkbox
  checked={false}
  id="c4"
  indeterminate={true}
  onChange={[Function]}
>
  <div>
    <input
      checked={false}
      className="Checkbox__input Checkbox__input--indeterminate"
      disabled={false}
      id="c4"
      onChange={[Function]}
      type="checkbox"
    />
    <label
      className="Checkbox__label"
      htmlFor="c4"
    >
      <span
        className="Checkbox__box"
      >
        <svg
          className="Checkbox__svg"
          height="10px"
          viewBox={
            Array [
              0,
              0,
              10,
              10,
            ]
          }
          width="12px"
        >
          <line
            x1="2"
            x2="8"
            y1="6"
            y2="6"
          />
        </svg>
      </span>
      <Text
        className="Checkbox__text"
        context="default"
        inline={true}
      >
        <span
          className="Checkbox__text"
        >
          Useless checkbox
        </span>
      </Text>
    </label>
  </div>
</Checkbox>
`;

exports[`<Checkbox> that renders a checkbox should rendered disabled checkbox correctly 1`] = `
<Checkbox
  disabled={true}
  id="c3"
>
  <div>
    <input
      className="Checkbox__input"
      disabled={true}
      id="c3"
      type="checkbox"
    />
    <label
      className="Checkbox__label"
      htmlFor="c3"
    >
      <span
        className="Checkbox__box"
      >
        <svg
          className="Checkbox__svg"
          height="10px"
          viewBox={
            Array [
              0,
              0,
              10,
              10,
            ]
          }
          width="12px"
        >
          <polyline
            points="1.5 6 3.5 9 8 3"
          />
        </svg>
      </span>
      <Text
        className="Checkbox__text"
        context="neutral"
        inline={true}
      >
        <span
          className="Text--context_neutral Checkbox__text"
        >
          Useless checkbox
        </span>
      </Text>
    </label>
  </div>
</Checkbox>
`;
